--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,7 +6,21 @@
   justify-content: center;
   align-items: center;
 }
-
+.headerhtml{
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.wraper{
+position: absolute;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+background: rgba(0, 0, 0,0.2);
+z-index: 10000000;
+}
 .main {
   padding: 5rem 0;
   flex: 1;
