--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,20 @@ a {
 * {
   box-sizing: border-box;
 }
+
+
+.headerhtml{
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.wraper{
+position: absolute;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+background: rgba(0, 0, 0,0.2);
+z-index: 10000000;
+}
